[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "pyuptimekuma"
dynamic = ["version"]
description = "Simple Python wrapper for Uptime Kuma"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8.0"
authors = [
    { name = "Manfred Dennerlein Rodelo", email = "manfred@dennerlein.name" },
    { name = "Jayakorn Karikan", email = "jayakornk@gmail.com" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp>=3.12.9",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.11.13",
]

[project.urls]
Source = "https://github.com/tr4nt0r/python-uptimekuma"

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "pyuptimekuma/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pyuptimekuma",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
preview = true
ignore = ["TRY003", "N818"]


[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["pyuptimekuma"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

