[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "pythonkuma"
dynamic = ["version"]
description = "Simple Python wrapper for Uptime Kuma"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Manfred Dennerlein Rodelo", email = "manfred@dennerlein.name" },
    { name = "Jayakorn Karikan", email = "jayakornk@gmail.com" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp>=3.12.9",
    "prometheus-client>=0.21.0",
    "mashumaro>=3.13.1",
]

[project.urls]
Source = "https://github.com/tr4nt0r/pythonkuma"
Documentation = "https://tr4nt0r.github.io/pythonkuma"

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "pythonkuma/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pythonkuma",
]

[tool.hatch.envs.default]
dependencies = [
    "ruff==0.15.0",
    "aiohttp==3.13.2",
    "prometheus-client==0.23.1",
    "mashumaro==3.17",
    "mkdocs-material==9.7.0",
    "mkdocstrings[python]==1.0.2",
]

[tool.hatch.envs.hatch-static-analysis]
dependencies = [
    "ruff==0.15.0",
]
config-path = "none"

[tool.pytest.ini_options]
addopts = "--cov=pythonkuma/ --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope="module"
testpaths = ["tests"]
pythonpath = ["pythonkuma"]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "pytest-cov==7.0.0",
]

[tool.hatch.envs.default.scripts]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["TRY003", "COM812", "N818", "C901"]

[lint.per-file-ignores]
"**/scripts/*" = [
  "INP001",
  "T201",
]
"**/tests/**/*" = [
  "PLC1901",
  "PLR2004",
  "PLR6301",
  "S",
  "TID252",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.isort]
known-first-party = ["pyuptimekuma"]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pydocstyle]
convention = "numpy"